# equivariance-rl

./: .gitignore  .gitmodules  LICENSE  README.md  cumulative_avg_return.json  environment.yml  pyproject.toml  requirements.txt
equivariant-experimentation/ppo/: ppo.py
equivariant-experimentation/sac/: sac.py  sac_slurm_jobs.bash
equivariant-experimentation/td3/: env_setup.py  equi_utils.py  eval.py  sweep.yaml  td3.py  td3_jax.py  td3_optuna.py  td3_optuna_slurm_jobs.bash  td3_slurm_jobs.bash  td3_symmetrizer.py  td3_symmtrizer.py
equivariant-experimentation/td3/scripts/: test_equivaraiant_actor_critic_nn.ipynb  (+2 more)
ppo/: ppo.ipynb  ppo_sweep_agent.py  ppo_sweep_init.py  ppo_symmetrizer.py
ppo/slurm/: ppo_best_param_runs.bash  ppo_sweep_slurm_jobs.bash
sac/: sac_emlp.py  sac_slurm_jobs.bash  sac_symmetrizer.py
td3/: td3_emlp.py  td3_sweep_agent.py  td3_sweep_init.py  td3_symmetrizer.py
td3/finetune_slurm/: sweep_equi.yaml  sweep_none.yaml  td3_optuna.py  td3_optuna_slurm_jobs.bash  td3_slurm_jobs.bash  td3_sweep_slurm_jobs.bash
td3/notebook_mlp_tests/: test_equivaraiant_actor_critic_nn_jax.ipynb  test_equivaraiant_actor_critic_nn_pytorch.ipynb  test_symmetrizer.ipynb
td3/slurm/: td3_seed_slurm_jobs.bash  td3_sweep_slurm_jobs.bash
transformer/: create_offline_dataset.py  min_decision_equi_transformer.ipynb  min_decision_transformer.ipynb  min_dt.py  stitch_offline_dataset.py
transformer/processed_data/: dt_InvertedPendulum-v4_log_24-11-22-21-10-38.csv
utils/: emlp_utils.py  env_setup.py  eval.py  symmetrizer_utils.py
